--- a/index.html
+++ b/index.html
@@ -64,12 +64,21 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="experience icon" class="icon">
             <h3>Experience</h3>
-            <p>HTML<br>CSS<br>JavaScript<br>React</p>
+            <ul class="ul_list_about">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>WordPress</li>
+            </ul>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon">
             <h3>Education</h3>
-            <p>B.B.A. e-Commerce - City University of Hong Kong <br>Foundations of User Experience (UX) Design - Google</p>
+            <ul class="ul_list_about">
+              <li>B.B.A. e-Commerce - City University of Hong Kong</li>
+              <li>Foundations of User Experience (UX) Design - Google</li>
+              <li>Foundational C# with Microsoft</li>
+            </ul>
           </div>
         </div>
         <div class="text-container">
@@ -134,8 +143,15 @@
           </div>
         </div>
         <div class="details-container">
-          <h2 class="experience-sub-title">UX/UI Design</h2>
+          <h2 class="experience-sub-title">Others</h2>
           <div class="article-container">
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>C#</h3>
+                <p>Basic</p>
+              </div>
+            </article>
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
               <div>
